# .weave

./: .gitignore  CMakeLists.txt  Core Syntax & Constructs.md  FIXED_TESTS.md  Manifesto.md  ROADMAP.md  The Rebel's Handbook - Advanced Temporal Weaving.md
.cursor/rules/: testing.mdc
docs/: Advanced Quantum Entanglement - The Art of Temporal Interconnection.md  CHANGELOG.md  COMPLETION.md  CVY_File_Format.md  Chronoscript Language Specification.md  Chronoscript Lore and Narrative Guide.md  Chronoscript Runtime Mechanics Guide.md  Chronoscript Standard Library Reference.md  Coding Philosophies - The Art of Temporal Expression.md  Complex Quantum Operations - The Art of Temporal Mastery.md  Directory_Structure.md  FIXED.md  File Extensions - The Art of Temporal Expression.md  Glossary - The Language of Temporal Programming.md  Loop Mechanics - The Art of Temporal Iteration.md  ML_Model_Paths.md  Program Lifecycle - The Weaver's Journey.md  README.md  Resource Management - The Battle for Temporal Control.md  TECHNICAL_DEBT.md  TECH_DEBT_CODE_LOCATIONS.md  TECH_DEBT_DESIGN_TD1_TD2.md  TECH_DEBT_ROADMAP.md  TIDYING_SUMMARY.md  reference
docs/advanced/: Advanced Quantum Operations - The Art of Temporal Manipulation.md  Development Tools - The Art of Temporal Crafting.md  Error Handling - The Art of Temporal Recovery.md  Loot System - The Rewards of Temporal Mastery.md  Unified Visualization Dashboard - The Art of Temporal Visualization.md  Variables - The Duality of Data.md  quantum_operations
docs/advanced/error_handling/: Advanced Error Handling and Recovery - The Art of Temporal Resilience.md  Advanced Paradox Management - The Art of Temporal Harmony.md
docs/advanced/integration_features/: Advanced Feature Integration - The Art of Temporal Synthesis.md  Advanced Features - The Art of Temporal Mastery.md  Advanced Features.md  Advanced Usage Scenarios - The Art of Temporal Application.md
docs/advanced/resource_management/: Advanced Resource Management - The Art of Temporal Optimization.md  Advanced Resource Optimization - The Art of Temporal Efficiency.md  Aethel & Chronon Economy - A Programmer's Guide to Temporal Resources.md
docs/concepts/: Loot System - The Rewards of Temporal Mastery.md  Practical Applications - The Living Narrative of Code.md  Variable Flags - The Art of Temporal Expression.md
docs/core/: Coding Philosophies - The Art of Temporal Expression.md  Core Concepts - The Foundation of Temporal Programming.md  Core Documentation - The Art of Temporal Programming.md  Core Syntax & Constructs.md  File Extensions - The Art of Temporal Expression.md  Getting Started - The Path to Temporal Mastery.md  Loop Mechanics - The Art of Temporal Iteration.md  Loot System - The Rewards of Temporal Mastery.md  Manifesto.md  Phase1_Completion_Summary.md  Practical Applications - The Living Narrative of Code.md  Program Lifecycle - The Weaver's Journey.md  Programming as Temporal Weaving.md  Resource Management - The Battle for Temporal Control.md  Resource System - The Battle for Temporal Control.md  The Great Duality - Order and Flux.md  Variable Flags - The Art of Temporal Expression.md  Variable System - The Duality of Data.md  Variables - The Duality of Data.md
docs/examples/: Advanced Features - The Art of Temporal Mastery.md  Example Programs - The Art of Temporal Practice.md  Learning Path Examples - The Journey to Mastery.md
docs/guides/: Getting Started - The Journey of a Temporal Developer.md  Path of the Conformist - Foundational Guide.md  Style Guide - The Art of Temporal Expression.md  Temporal Synchronization - The Art of Temporal Harmony.md  The Rebel's Handbook - Advanced Temporal Weaving.md
docs/implementation/: Phase_3_Implementation_Guide.md
docs/phase_summaries/: Phase_2_Completion_Summary.md
docs/specifications/: Chronovyan_Data_Types.md  Chronovyan_Formal_Grammar.md  Chronovyan_Loop_Stability_Metrics.md  Chronovyan_Runtime_Semantics.md  Chronovyan_Variable_Interaction_Rules.md
docs/tools/: Development Tools - The Art of Temporal Crafting.md  File Extensions - The Art of Temporal Expression.md
docs/troubleshooting/: Advanced Debugging - The Art of Temporal Analysis.md  FAQ - Common Questions and Answers.md  Troubleshooting - The Art of Temporal Debugging.md  Troubleshooting Guide - The Art of Temporal Debugging.md
docs/tutorials/: Interactive Tutorials - The Hands-on Path to Mastery.md
examples/: README.md  fibonacci_sequence.cvy  first_fracture_simulation.cvy  hello_timeline.cvy  hello_world.txt  minimal.cvy  quantum_weaver.cvy  rule110_simulation.cvy  temporal_branching.txt  temporal_simulation.cvy  the_synth_weavers_gambit.cvy  timeline_merge.cvy
include/: ast_nodes.h  environment.h  error_handler.h  interpreter.h  lexer.h  parser.h  source_file.h  source_location.h  temporal_runtime.h  token.h  value.h  variant_fix.h
include/chronovyan/: common_types.hpp  core.hpp  metric_collector.hpp  metric_source.hpp  mode_decision_engine.hpp  notification_service.hpp  optimization_metrics.hpp  quantum.hpp  real_time_optimizer.hpp  stability.hpp  state_controller.hpp  temporal_synchronizer.hpp  timeline.hpp
include/chronovyan/advanced/: advanced_temporal_control.hpp
scripts/: check_cross_references.py  organize_docs.sh  requirements.txt  update_references.py
src/: advanced_temporal_control.cpp  ast_nodes.cpp  core.cpp  environment.cpp  error_handler.cpp  interpreter.cpp  lexer.cpp  main.cpp  metric_collector.cpp  ml_model.cpp  ml_model.hpp  mode_decision_engine.cpp  mode_decision_engine.cpp.new  mode_decision_engine.hpp  notification_service.cpp  parser.cpp  real_time_optimizer.cpp  source_file.cpp  source_location.cpp  state_controller.cpp  state_controller.h  state_controller.hpp  temporal_runtime.cpp  temporal_synchronizer.cpp  token.cpp  value.cpp
tests/: CMakeLists.txt  advanced_temporal_control_test.cpp  metric_collector_mode_decision_integration_test.cpp  metric_collector_test.cpp  ml_optimizer_smoke_test.cpp  system_integration_test.cpp  temporal_synchronizer_test.cpp  test_file_extension.cpp  test_ml_optimization.cpp
(+4 files in other folders)
