# This file is included by the main CMakeLists.txt
# It can be used to add additional tests that are not defined in the main CMakeLists.txt

# If you need to add more tests, add them here
# Example:
# add_executable(additional_test additional_test.cpp)
# target_link_libraries(additional_test
#     PRIVATE
#     chronovyan
#     gtest
#     gtest_main
# )
# add_test(NAME additional_test COMMAND additional_test) 